force-app/main/default/objects/dupcheck__dcJob__c/dupcheck__dcJob__c.object-meta.xml
<CustomObject>
    <label>Plauti Deduplicate Job</label>
    <nameField>
        <displayFormat>JOB{0000}</displayFormat>
        <label>Plauti Deduplicate Job</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plauti Deduplicate Jobs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>