force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__apex__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__apex__c</fullName>
    <label>Apex Job Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>