force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__autoProcessConvertOwner__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__autoProcessConvertOwner__c</fullName>
    <label>Auto Process Convert Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>