force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__autoProcessConvertStatus__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__autoProcessConvertStatus__c</fullName>
    <label>Auto Process Convert Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>