force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__autoProcessGroupFilter__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__autoProcessGroupFilter__c</fullName>
    <description>Contains the Plauti filter object that can be parsed to SOQL.</description>
    <label>Auto Process Group Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>