force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__deleteIdentifier__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__deleteIdentifier__c</fullName>
    <label>Identifier for Bulk Job Deletion</label>
    <length>24</length>
    <type>Text</type>
</CustomField>