force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__errorMessage__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__errorMessage__c</fullName>
    <label>Error Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>