force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__filter__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__filter__c</fullName>
    <description>Contains the predefined filter</description>
    <label>filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>