force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__lastExecution__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__lastExecution__c</fullName>
    <label>Last time executed</label>
    <type>DateTime</type>
</CustomField>