force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__matchObject__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__matchObject__c</fullName>
    <label>Match Object</label>
    <length>4</length>
    <type>Text</type>
</CustomField>