force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__name__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__name__c</fullName>
    <label>Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>