force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__ownerHistory__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__ownerHistory__c</fullName>
    <label>Owner History</label>
    <length>200</length>
    <type>Text</type>
</CustomField>