force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__pairFilter__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__pairFilter__c</fullName>
    <description>Contains the SOQL for filtering on pair level for sub-jobs</description>
    <label>Pair Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>