force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__result__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__result__c</fullName>
    <label>Result</label>
    <length>250</length>
    <type>Text</type>
</CustomField>