force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__scenario__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__scenario__c</fullName>
    <label>Scenario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>