force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__scenarioData__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__scenarioData__c</fullName>
    <label>Scenario data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>