force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__schedule__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__schedule__c</fullName>
    <label>Schedule</label>
    <length>100</length>
    <type>Text</type>
</CustomField>