force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__sourceFilter__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__sourceFilter__c</fullName>
    <description>Contains the Plauti filter object. The filter__c is used for the search.</description>
    <label>Source Filter</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>