force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__sourceObject__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__sourceObject__c</fullName>
    <label>Source Object</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>