force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__uniqueName__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__uniqueName__c</fullName>
    <label>Unique Name</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>