force-app/main/default/objects/dupcheck__dcJob__c/fields/dupcheck__workerData__c.field-meta.xml
<CustomField>
    <fullName>dupcheck__workerData__c</fullName>
    <label>External worker data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>